--- a/ImageEditor.html
+++ b/ImageEditor.html
@@ -225,25 +225,25 @@
 					<div class="fileContainer btn" style="height: 12%; margin: 1%; display: none;" id="gray_div">
 					    <label><input type="checkbox" id="grayscale" name="grayscale">
 					    	<span for="grayscale">Grayscale</span><br>
-					    	<img style="margin-top: 25%;" src="/home/riya/intern_winter/grayscale.jpg" alt="Smiley face" height="52" width="42">
+					    	<img style="margin-top: 25%;" src="grayscale.jpg" alt="Smiley face" height="52" width="42">
 					     </label>
 					  </div>
 					<div class="fileContainer btn" style="height: 12%; margin: 1%; display: none;" id="sepia_div">
 					    <label> <input type="checkbox" id="sepia2" name="sepia2">
 					    	<span for="sepia2">Sepia</span><br>
-					    	<img style="margin-top: 25%;" src="/home/riya/intern_winter/sepia.png" alt="Smiley face" height="52" width="42">
+					    	<img style="margin-top: 25%;" src="sepia.png" alt="Smiley face" height="52" width="42">
 					    </label>
 					  </div>
 					<div class="fileContainer btn" style="height: 8%; margin: 1%; display: none;" id="blur_div">
 					    <label> <input type="checkbox" id="blur" name="blur">
 					    	<span for="blur">Blur</span><br>
-					    	<img src="/home/riya/intern_winter/blur.png" alt="Smiley face" height="42" width="42">
+					    	<img src="blur.png" alt="Smiley face" height="42" width="42">
 					    </label>
 					  </div>
 					  <div class="fileContainer btn" style="height: 8%; margin: 1%; display: none;" id="sharpen_div">
 					    <label><input type="checkbox" id="sharpen" name="sharpen">
 					    	<span for="sharpen">Sharpen</span><br>
-					    	<img src="/home/riya/intern_winter/sharpen.png" alt="Smiley face" height="42" width="42">
+					    	<img src="sharpen.png" alt="Smiley face" height="42" width="42">
 					    	
 					     </label>
 					  </div>
