--- a/ImageEditor.html
+++ b/ImageEditor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>DrumUp</title>
+	<title>Image Editor</title>
 	<link href="http://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<style type="text/css">
 		.controls {
